ENTREGA 2 - Service - Character Detail

--- a/src/app/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/barra-navegacion/barra-navegacion.component.html
@@ -9,7 +9,7 @@
       </ul>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active letras" aria-current="page" routerLink="/tarjeta">Character</a>
+          <a class="nav-link active letras" aria-current="page" routerLink="/character">Character</a>
         </li>
       </ul>
       <ul class="nav justify-content-end">
