--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -7,7 +7,7 @@
     />
     <div class="card-body">
       <h5 class="card-title">{{ character.name }}</h5>
-      <a [routerLink]="['/tarjeta', characters.id]" class="btn btn-primary boton"
+      <a [routerLink]= "['/character', character.id]" class="btn btn-primary boton"
         >See more</a
       >
     </div>
