--- a/src/app/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/barra-navegacion/barra-navegacion.component.html
@@ -17,6 +17,11 @@
           <a class="nav-link active letras" aria-current="page" routerLink="/about">About</a>
         </li>
       </ul>
+      <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link active letras" aria-current="page" routerLink="/add">Add</a>
+        </li>
+      </ul>
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
